# tiny-lang-detector

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
data/: Anufo_bigrams.csv  Anyin_bigrams.csv  Avatime_bigrams.csv  Bimoba_bigrams.csv  Bisa_bigrams.csv  Buli_bigrams.csv  Chumburung_bigrams.csv  Dangme_bigrams.csv  Delo_bigrams.csv  Farefare_bigrams.csv  Gikyode_bigrams.csv  Gonja_bigrams.csv  Kasem_bigrams.csv  Konkomba_bigrams.csv  Konni_bigrams.csv  Kusaal_bigrams.csv  Lelemi_bigrams.csv  Mampruli_bigrams.csv  Nawuri_bigrams.csv  Nkonya_bigrams.csv  Ntcham_bigrams.csv  Paasaal_bigrams.csv  Sekpele_bigrams.csv  Selee_bigrams.csv  Siwu_bigrams.csv  Southern_Birifor_bigrams.csv  Southern_Dagaare_bigrams.csv  Tampulma_bigrams.csv  Tumulung_Sisaala_bigrams.csv  Tuwuli_bigrams.csv  Vagla_bigrams.csv  dagbani_bigrams.csv  ewe_bigrams.csv  twi_bigrams.csv
examples/: dagbani_sample.txt  demo.py  ewe_sample.txt  twi_sample.txt
scripts/: batch_detect.py  coverage_report.py  validate_bigrams.py
src/: __init__.py  cli.py  detector.py
tests/: conftest.py  test_detector.py
