[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "tiny-lang-detector"
version         = "0.1.0"
description     = "Lightweight bigram-based language detector"
readme          = "README.md"
requires-python = ">=3.8"
license         = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
